[gd_scene load_steps=10 format=3 uid="uid://bab3kx7gwfqu8"]

[ext_resource type="Texture2D" uid="uid://bwnymjiwtjehk" path="res://images/back.png" id="1_glv2v"]
[ext_resource type="Script" uid="uid://bykti34f31k2b" path="res://main.gd" id="1_r0du0"]
[ext_resource type="FontFile" uid="uid://cmn0ldq2viiq2" path="res://fonts/Kaph-Regular.ttf" id="2_uu6xs"]
[ext_resource type="AudioStream" uid="uid://dja70rt6qwvlr" path="res://audio/Click_04.wav" id="4_cm0pq"]
[ext_resource type="Texture2D" uid="uid://bypwnjyb1kojo" path="res://images/items.png" id="4_lgr22"]
[ext_resource type="AudioStream" uid="uid://6v83flblxvso" path="res://audio/Confirm_06.wav" id="5_fos0i"]
[ext_resource type="AudioStream" uid="uid://ditwemfj20qwq" path="res://audio/Denied_02.wav" id="6_3dxm6"]

[sub_resource type="LabelSettings" id="LabelSettings_r0du0"]
font = ExtResource("2_uu6xs")
font_size = 64
font_color = Color(0.16470589, 0.4509804, 0.4509804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_trn2v"]
texture = ExtResource("4_lgr22")
region_rect = Rect2(1552, 416, 16, 16)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_r0du0")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(972.99994, 728.99994)
scale = Vector2(6.0875, 6.0875)
texture = ExtResource("1_glv2v")
metadata/_edit_lock_ = true

[node name="HUD" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="HUD"]
offset_left = 70.0
offset_top = 30.0
offset_right = 644.0
offset_bottom = 104.0
text = "BOMB SWIPER"
label_settings = SubResource("LabelSettings_r0du0")

[node name="Stats" type="Label" parent="HUD"]
offset_left = 33.0
offset_top = 180.0
offset_right = 666.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0.18039216, 0.6901961, 0.59607846, 1)
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "Attempts: "

[node name="Button" type="Button" parent="HUD"]
offset_left = 234.0
offset_top = 1077.0
offset_right = 490.0
offset_bottom = 1172.0
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "START"
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 32.0
offset_top = 228.0
offset_right = 687.0
offset_bottom = 959.0
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "4X"
metadata/_edit_group_ = true

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer2" type="Panel" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer3" type="Panel" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer4" type="Panel" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer5" type="Panel" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "3X"
metadata/_edit_group_ = true

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer2" type="Panel" parent="VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer3" type="Panel" parent="VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer4" type="Panel" parent="VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer5" type="Panel" parent="VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "1.5X"
metadata/_edit_group_ = true

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer2" type="Panel" parent="VBoxContainer/HBoxContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer3" type="Panel" parent="VBoxContainer/HBoxContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer4" type="Panel" parent="VBoxContainer/HBoxContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer5" type="Panel" parent="VBoxContainer/HBoxContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "1X"
metadata/_edit_group_ = true

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer4"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer2" type="Panel" parent="VBoxContainer/HBoxContainer4"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer3" type="Panel" parent="VBoxContainer/HBoxContainer4"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer4" type="Panel" parent="VBoxContainer/HBoxContainer4"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer5" type="Panel" parent="VBoxContainer/HBoxContainer4"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_uu6xs")
theme_override_font_sizes/font_size = 32
text = "0.5X"
metadata/_edit_group_ = true

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="PanelContainer2" type="Panel" parent="VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer3" type="Panel" parent="VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer4" type="Panel" parent="VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="PanelContainer5" type="Panel" parent="VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_trn2v")
metadata/_edit_group_ = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cm0pq")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fos0i")

[node name="LostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3dxm6")

[connection signal="pressed" from="HUD/Button" to="." method="_on_button_pressed"]
